@@ -936,4 +936,5 @@
 		executable file: m2s
 	* src/libcpuarch: global variables sim_cycle and sim_inst removed.
 	* src/libcpuarch/sched.c: variable 'cpu' changed by 'node'.
+	* src/libcpuarch: variable 'p' changed by 'cpu'.
 
